Bug 389410 - Can't change swap file location
Summary: Can't change swap file location
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.3.3
Platform: Other Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-25 12:20 UTC by 8899driver
Modified: 2018-01-25 12:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 8899driver 2018-01-25 12:20:40 UTC
Hello

I'm using
Windows 10, 64bit
krita version 3.3.3 with wacom tablet CTL-490

In 'configure Krita' the performance - 'swap file location' is basically C:/..Appdata/Local/Temp
I want to change this, but it didn't work. 
It's roll-backed after I change that every time.
Comment 1 Halla Rempt 2018-01-25 12:24:47 UTC
Thank you for the report. I can confirm the issue.
Comment 2 Halla Rempt 2018-01-25 12:27:49 UTC
Git commit 54d06d514488652f4dfa14fb7585372a373142a4 by Boudewijn Rempt.
Committed on 25/01/2018 at 12:27.
Pushed by rempt into branch 'master'.

Fix logic for reading the swapfile from the configuration

M  +6    -4    libs/image/kis_image_config.cpp

https://commits.kde.org/krita/54d06d514488652f4dfa14fb7585372a373142a4