Fix logic for reading the swapfile from the configuration

BUG:389410